--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@supabase/supabase-js": "^2.94.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.31.0",
+    "json5": "^2.2.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
